--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
             text-decoration: none;
             color: #333;
         }
+        .author-info {
+            text-align: center;
+            margin-top: 20px;
+        }
+        .author-info a {
+            color: #77aaff;
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
@@ -61,10 +69,13 @@
         </div>
     </header>
     <div id="main" class="container">
-        <h1>Lista de Proyectos y Tareas</h1>
+        <h1>Lista de Practicas</h1>
+        <div class="author-info">
+            <p>Nombre: <b>Alex Gabriel Nina Aliaga</b></p>
+            <p>Repositorio: <a href="https://github.com/y3sterd4y/Tareas_web_III" target="_blank">https://github.com/y3sterd4y/Tareas_web_III</a></p>
+        </div>
         <ul class="project-list">
             <li><a href="tarea_1/simple.html">Tarea 1: Tipos de Layout</a></li>
-            <li><a href="proyecto2/index.html">Tarea 2: Aplicación Web Interactiva</a></li>
         </ul>
     </div>
 </body>
